# yeet

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  PKGBUILD  README.md
.github/workflows/: ci.yml  release.yml
defaults/: style.css
src/: desktop.rs  main.rs  ui.rs
