[package]
name = "yeet"
version = "0.1.3"
edition = "2021"
authors = ["1337hero"]
description = "A fast, minimal, configurable app launcher for Wayland"
license = "GPL-3.0-only"
repository = "https://github.com/1337hero/yeet"
keywords = ["launcher", "linux", "gtk", "desktop"]
categories = ["gui", "command-line-utilities"]
rust-version = "1.70"

[dependencies]
gtk4 = "0.10"
fuzzy-matcher = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6"
freedesktop-desktop-entry = "0.7"
gtk4-layer-shell = "0.7"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.deb]
section = "utils"
priority = "optional"
assets = [
    ["target/release/yeet", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/yeet/", "644"],
]
